--- a/DigitalHealthCheckWeb/Pages/FollowUpActions.cshtml
+++ b/DigitalHealthCheckWeb/Pages/FollowUpActions.cshtml
@@ -14,4 +14,5 @@
            param-errorList="@Model.ErrorList"
            param-selectedInterventions="@Model.SelectedInterventions"
            param-Interventions="@Model.AllInterventions"
-           param-customBarriers="@Model.CustomBarriers" />
+           param-customBarriers="@Model.CustomBarriers" 
+           param-actionCategories="@Model.ActionCategories"/>
