--- a/DigitalHealthCheckWeb/Pages/Shared/_Layout.cshtml
+++ b/DigitalHealthCheckWeb/Pages/Shared/_Layout.cshtml
@@ -26,6 +26,8 @@
     <link rel="apple-touch-icon" href="/assets/images/govuk-apple-touch-icon.png">
 
     <link rel="stylesheet" href="~/dist/main.css" />
+    <link rel="stylesheet" href="~/dist/healum.css" />
+
 
     <meta property="og:image" content="/assets/images/govuk-opengraph-image.png">
 
